--- a/package.json
+++ b/package.json
@@ -8,18 +8,45 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/montserrat": "^0.1.0",
+    "@expo-google-fonts/quicksand": "^0.1.0",
+    "@expo-google-fonts/raleway": "^0.1.0",
+    "@expo/vector-icons": "10.2.0",
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "1.9.2",
+    "@react-navigation/bottom-tabs": "^5.11.2",
+    "@react-navigation/drawer": "^5.11.4",
+    "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
+    "@unform/core": "^2.1.3",
+    "@unform/mobile": "^2.1.3",
     "expo": "~40.0.0",
+    "expo-camera": "~9.1.0",
+    "expo-checkbox": "~1.0.0",
+    "expo-font": "~8.4.0",
+    "expo-image-manipulator": "~8.4.0",
+    "expo-linear-gradient": "~8.4.0",
     "expo-status-bar": "~1.0.3",
+    "firebase": "^8.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-modalize": "^2.0.8",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-redash": "^16.0.2",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.0",
+    "react-native-web": "~0.13.12",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "@types/styled-components": "^5.1.5",
     "typescript": "~4.0.0"
   },
   "private": true
