--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "preinstall": "./script.sh",
+    "start": "./script.sh && expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
+    "financial-core": "file:core",
     "@expo-google-fonts/montserrat": "^0.1.0",
     "@expo-google-fonts/quicksand": "^0.1.0",
     "@expo-google-fonts/raleway": "^0.1.0",
