--- a/core/package.json
+++ b/core/package.json
@@ -10,8 +10,8 @@
   "devDependencies": {
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
-    "typescript": "^4.1.3",
-    "react": "^17.0.1"
+    "react": "^17.0.1",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "firebase": "^8.2.1"
