--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo": "~40.0.0",
     "expo-camera": "~9.1.0",
     "expo-checkbox": "~1.0.0",
+    "expo-file-system": "~9.3.0",
     "expo-font": "~8.4.0",
     "expo-image-manipulator": "~8.4.0",
     "expo-linear-gradient": "~8.4.0",
